# ComfyUI-WindowSeat

./: .gitignore  CLAUDE.md  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  run_tests.sh  windowseat_core.py
.github/workflows/: publish.yml
tests/: __init__.py  conftest.py  test_core.py  test_integration.py  test_nodes.py
