[project]
name = "comfyui-windowseat"
description = "ComfyUI custom node for removing reflections from images using the WindowSeat model."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "diffusers>=0.36.0",
    "transformers>=4.40.0",
    "accelerate",
    "safetensors",
    "huggingface_hub",
    "peft",
    "bitsandbytes",
    "Pillow",
    "numpy",
]

[project.urls]
Repository = "https://github.com/toshas/ComfyUI-WindowSeat"

[tool.comfy]
PublisherId = "toshas"
DisplayName = "ComfyUI-WindowSeat"
Icon = ""

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator instead of if-else
]

[tool.ruff.lint.isort]
known-first-party = ["windowseat_core", "nodes"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
